new assets. dark/light theme. style adjustments. shuffle feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,11 @@
     <string name="play_description">Play button</string>
     <string name="shopify_description">Shopify button</string>
     <string name="close_description">X button</string>
+    <string name="bright_description">Switch between dark and light mode</string>
+    <string name="scores_description">look at previous high scores</string>
+    <string name="shuffle_description">Shuffle button</string>
 
-    <string name="win_message">You Win!</string>
+    <string name="win_message">Winner!</string>
 
     <string name="access_token">c32313df0d0ef512ca64d5b336a0d7c6</string>
 </resources>
